--- a/index.html
+++ b/index.html
@@ -20,7 +20,7 @@
     <script>
         async function fetchBackgroundImage() {
             try {
-                const response = await fetch('https://image-rotation.workers.dev/images');
+                const response = await fetch('https://image-rotation-production.jmajerus.workers.dev/');
                 const data = await response.json();
                 document.body.style.backgroundImage = `url('${data.image}')`;
             } catch (error) {
