--- a/index.html
+++ b/index.html
@@ -3,7 +3,7 @@
 <head>
     <meta charset="UTF-8">
     <meta name="viewport" content="width=device-width, initial-scale=1.0">
-    <title>Slideshow with Image Rotation Worker</title>
+    <title>Sequential Image Rotator</title>
     <style>
         body {
             margin: 0;
@@ -18,33 +18,22 @@
 </head>
 <body>
     <script>
-        async function fetchBackgroundImage() {
+        async function fetchNextImage() {
             try {
                 const response = await fetch('https://image-rotation-production.jmajerus.workers.dev/');
-                const data = await response.json();  // Full photo object from Flickr
-
-                const imageUrl = `https://live.staticflickr.com/${data.server}/${data.id}_${data.secret}_b.jpg`;
-                document.body.style.backgroundImage = `url('${imageUrl}')`;
-
-                console.log(`Title: ${data.title}`);
-                console.log(`Uploaded by: ${data.owner}`);
-            } catch (error) {
-                console.error('Failed to fetch image rotation worker.', error);
-            }
-        }
-
-        async function fetchLocalBackgroundImage() {
-            try {
-                const response = await fetch('/images');
                 const data = await response.json();
-                document.body.style.backgroundImage = `url('${data.image}')`;
+
+                if (data.image) {
+                    document.body.style.backgroundImage = `url('${data.image}')`;
+                }
             } catch (error) {
-                console.error('Failed to fetch background image.');
+                console.error('Failed to fetch next image:', error);
             }
         }
 
-        fetchLocalBackgroundImage();
-        setInterval(fetchBackgroundImage, 10000);  // Rotate every 10s
+        // Rotate every 10 seconds
+        fetchNextImage();
+        setInterval(fetchNextImage, 10000);
     </script>
 </body>
 </html>
