--- a/index.html
+++ b/index.html
@@ -22,6 +22,7 @@
             try {
                 const response = await fetch('https://image-rotation-production.jmajerus.workers.dev/');
                 const data = await response.json();
+                console.log('Fetched next image: ', data.title);
 
                 if (data.image) {
                     document.body.style.backgroundImage = `url('${data.image}')`;
